--- a/codes/data_extraction/google_places_extractor.ipynb
+++ b/codes/data_extraction/google_places_extractor.ipynb
@@ -1,13 +1,126 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "## Global Imports"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "import pandas\n",
+    "import requests\n",
+    "import time\n",
+    "import urllib"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Utilities To Request Google Places API And Parse Results"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "\n",
+    "def radar_search(lat, lng, radius, types):\n",
+    "    # making the url\n",
+    "    AUTH_KEY = 'AIzaSyCro9OQxfqjD_fMiPwT9bpQoMUIg_5OVQs'\n",
+    "    LOCATION = str(lat) + \",\" + str(lng)\n",
+    "    RADIUS = radius\n",
+    "    TYPES = types\n",
+    "    MyUrl = ('https://maps.googleapis.com/maps/api/place/radarsearch/json'\n",
+    "             '?location=%s'\n",
+    "             '&radius=%s'\n",
+    "             '&types=%s'\n",
+    "             '&key=%s') % (LOCATION,RADIUS, TYPES, AUTH_KEY)\n",
+    "    print(MyUrl)\n",
+    "    response = requests.get(MyUrl)\n",
+    "    jsonData = response.json()\n",
+    "    return jsonData\n",
+    "\n",
+    "def extractData(search):\n",
+    "    countTemp =0\n",
+    "    if search['status'] == 'OK':  # loop through results\n",
+    "        results = search['results']\n",
+    "        countTemp = len(search['results'])\n",
+    "    return countTemp\n",
+    "\n",
+    "\n",
+    "def nearBySearch(lat,lng,radius,typ):\n",
+    "    search = radar_search(lat, lng, radius, types=typ)\n",
+    "    count = 0\n",
+    "    count= extractData(search)\n",
+    "    return count"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Setting Circumference for Individual Feature "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "typesDict = {'airport_10000': 10000,\n",
+    " 'atm_500': 500,\n",
+    " 'bank_500': 500,\n",
+    " 'bus_station_500': 500,\n",
+    " 'church_500': 500,\n",
+    " 'hospital_500': 500,\n",
+    " 'liquor_store_500': 500,\n",
+    " 'park_500': 500,\n",
+    " 'parking_500': 500,\n",
+    " 'pharmacy_500': 500,\n",
+    " 'police_500': 500,\n",
+    " 'restaurant_500': 500,\n",
+    " 'school_500': 500,\n",
+    " 'taxi_stand_2000': 2000,\n",
+    " 'train_station_1000': 1000,\n",
+    " 'university_500': 500\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "###  Sample Request To Scale In AWS"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "latLongDict[typ]=nearBySearch(lat, lng, radius, types)"
+   ]
   }
  ],
  "metadata": {
